fix: footer spacing and sizing

--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -1,33 +1,37 @@
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@500&display=swap');
+
 .NavbarItems {
   display: flex;
   height: 90px;
   justify-content: center;
   /* align-items: center; */
   font-size: 1.2rem;
-  background-color: rgb(253, 253, 253);
+  background-color: #fdfdfd;
   font-style: normal;
   font-weight: bold;
   font-size: 24px;
   line-height: 31px;
 }
 .nav-menu {
-  display: grid;
+  display: flex;
+  justify-content: space-between;
   align-items: center;
-  grid-template-columns: repeat(8, auto);
-  grid-gap: 10px;
   list-style: none;
   text-align: center;
-  justify-content: start;
-  width: 85vw;
-  height: 90px;
-  margin-left: 6rem;
-  margin-right: 2rem;
-  padding-top: 1px;
+
+  width: 1366px;
+  height: 91px;
 }
 .nav-links {
-  color: rgb(0, 0, 0);
+  color: #121013;
   text-decoration: none;
   padding: 1.8rem 1rem;
+  letter-spacing: 0.05em;
+  font-family: 'IBM Plex Mono';
+  font-weight: bold;
+  font-size: 25px;
+  line-height: 35px;
+  text-align: center;
 }
 .nav-links:hover {
   background-color: black;
